<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/banner2"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/formLayout"
        android:layout_width="216dp"
        android:layout_height="368dp"
        android:background="#69FFFFFF"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/mainColor"
            android:textSize="25dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorGreen"
            android:textSize="12dp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/logPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/wanttoregister"
                android:textColor="@color/textColor"
                android:textSize="10dp" />

            <TextView
                android:id="@+id/logSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:fontFamily="sans-serif"
                android:linksClickable="true"
                android:text="@string/signup"
                android:textColor="@color/hyperlinkBlueDark"
                android:textSize="10dp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/forgetpassword"
            android:textColor="@color/textColor"
            android:textSize="10dp" />


        <Button
            android:id="@+id/logButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_login"
            android:clickable="true"
            android:enabled="true"
            android:fontFamily="sans-serif-smallcaps"
            android:stateListAnimator="@null"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/mainColor"
            android:textSize="14dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/loginError"
            android:layout_width="195dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/kumailconstraint"
            android:textColor="@color/textColorGreen"
            android:textSize="8dp"
            android:visibility="invisible" />

    </LinearLayout>


</RelativeLayout>

