<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="150dp"
    android:padding="5dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/plan_delete_msg"
        android:gravity="center" />
    <View
        android:layout_width="match_parent"
        android:layout_marginRight="-5dp"
        android:layout_marginLeft="-5dp"
        android:layout_height="3dp"
        android:background="@color/button_red"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/cancel_deleting_plan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/cancel"/>
        <TextView
            android:id="@+id/delete_plan_popup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" android:layout_gravity="center"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/delete_plan"/>
    </LinearLayout>

</LinearLayout>