<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait"
    tools:context=".ProfileFragment">

    <RelativeLayout
        android:id="@+id/ass_header_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/textColorGreen"
        android:orientation="vertical"
        android:padding="15dp">


        <TextView
            android:id="@+id/schedule_header_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/economica"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/textColorAlmostWhite"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/logoutBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center"
            android:clickable="true"
            android:drawableRight="@drawable/logout"
            android:drawablePadding="10dp"
            android:drawableTint="@color/textColorAlmostWhite"
            android:elevation="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/Logout"
            android:textColor="@color/textColorAlmostWhite"
            android:textSize="20sp" />

        <View
            android:id="@+id/line_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/schedule_header_name"
            android:layout_gravity="bottom"
            android:layout_marginTop="40dp"
            android:background="@color/textColorAlmostWhite" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-70dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="200dp"
        android:background="@color/white"
        android:elevation="10dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="5">

        <LinearLayout
            android:id="@+id/PersonalInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/PersonalInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@drawable/personal_icon"
                android:drawableTint="@color/black"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/personal_info"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
             />

        <LinearLayout
            android:id="@+id/NotificationsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/NotificationsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@drawable/notif_icon"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/notif"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
             />

        <LinearLayout
            android:id="@+id/RateLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/RateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@drawable/rate_icon"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/rateApp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
             />

        <LinearLayout
            android:id="@+id/ShareLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ShareText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@drawable/share_icon"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/shareApp"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
             />

        <LinearLayout
            android:id="@+id/TermsLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TermsText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:clickable="true"
                android:drawableRight="@drawable/terms_2icon"
                android:fontFamily="sans-serif-condensed-light"
                android:text="@string/TermsOfService"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>


